# Scar

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  IDEA.md  LICENSE  README.md  ROADMAP.md  SCAR-FORMAT.md  SPEC.md  STRESS-TEST.md  pyproject.toml
.claude/: decisions.jsonl
.github/workflows/: ci.yml  pr-validation.yml  release.yml
.scars/: 0001-git-grep-ere-pitfalls.landmine.md  0002-agent-direct-hook-install.deadend.md  0003-installer-binds-to-active-venv-scar.landmine.md  0004-promote-roundtrip-drops-expires-evidence.landmine.md  0005-history-rewrite-orphans-commit-evidence.landmine.md  0006-yaml-pattern-anchor-over-escaping.landmine.md  README.md
.scars/candidates/: agent-direct-hook-install.deadend.md  fp-log.txt  history-rewrite-orphans-commit-evidence.md  yaml-pattern-anchor-over-escaping.md
experiments/anchor-survival/: PROTOCOL.md  RESULTS.md  long_replay.py  replay.py
experiments/auto-authorship/: FINDINGS.md  PROTOCOL.md
experiments/fence-honor/: PROTOCOL.md  RESULTS.md  grade.py
experiments/fence-honor/fixture/: README.md
experiments/harvest/: CURATED.md  PROTOCOL.md  harvest.py  report-homelab-apps.md
hook/: scar-hooks.py  scar-precheck.py  scar-session-notice.py  scar-stop-drafter.py
src/scar/: agent.py  cli.py  evidence.py  harvest.py  hooks.py  installer.py  lint.py  match.py  mcp.py  model.py  orphan.py  render.py  store.py
tests/: test_cli.py  test_evidence.py  test_harvest.py  test_hooks.py  test_installer.py  test_lifecycle.py  test_lint.py  test_match.py  test_mcp.py  test_model.py  test_orphan.py  test_store.py
(+6 files in other folders)
